--- a/src/Views/CommitBaseInfo.axaml
+++ b/src/Views/CommitBaseInfo.axaml
@@ -100,8 +100,8 @@
                                    BranchNameBackground="{DynamicResource Brush.DecoratorBranch}"
                                    TagNameBackground="{DynamicResource Brush.DecoratorTag}"
                                    LabelForeground="{DynamicResource Brush.DecoratorFG}"
-                                   FontFamily="{DynamicResource Fonts.Monospace}"
-                                   FontSize="10"
+                                   FontFamily="{DynamicResource Fonts.Primary}"
+                                   FontSize="11"
                                    VerticalAlignment="Center"
                                    Refs="{Binding Decorators}"/>
           </Border>
