--- a/src/Resources/Locales/zh_TW.axaml
+++ b/src/Resources/Locales/zh_TW.axaml
@@ -246,6 +246,8 @@
   <x:String x:Key="Text.FileCM.UseTheirs" xml:space="preserve">使用 THEIRS (checkout --theirs)</x:String>
   <x:String x:Key="Text.FileCM.UseMine" xml:space="preserve">使用 MINE (checkout --ours)</x:String>
   <x:String x:Key="Text.FileHistory" xml:space="preserve">檔案歷史</x:String>
+  <x:String x:Key="Text.FileHistory.FileContent" xml:space="preserve">檔案内容</x:String>
+  <x:String x:Key="Text.FileHistory.FileChange" xml:space="preserve">檔案更改</x:String>
   <x:String x:Key="Text.Filter" xml:space="preserve">過濾</x:String>
   <x:String x:Key="Text.GitFlow" xml:space="preserve">GIT工作流</x:String>
   <x:String x:Key="Text.GitFlow.DevelopBranch" xml:space="preserve">開發分支 ：</x:String>
