--- a/src/Views/FileHistories.axaml
+++ b/src/Views/FileHistories.axaml
@@ -111,7 +111,7 @@
                      HorizontalAlignment="Center" VerticalAlignment="Center"
                      IsVisible="{Binding IsLoading}"/>
 
-      <Grid Grid.Column="2" RowDefinitions="Auto,*" IsVisible="{Binding !IsLoading}">
+      <Grid Grid.Column="2" RowDefinitions="Auto,*,Auto" IsVisible="{Binding !IsLoading}">
         <ListBox Grid.Row="0"
                  Margin="0,8"
                  SelectedIndex="{Binding ViewMode, Mode=TwoWay}"
@@ -211,7 +211,22 @@
             </DataTemplate>
           </ContentControl.DataTemplates>
         </ContentControl>
+        
+        <Button Grid.Row="2"
+                Classes="flat primary"
+                Margin="0,0,0,8"
+                HorizontalAlignment="Center"
+                Content="{DynamicResource Text.ChangeCM.CheckoutThisRevision}"
+                Click="OnResetToSelectedRevision"/>
       </Grid>
     </Grid>
+    
+    <Border Grid.Row="1" x:Name="NotifyDonePanel" Background="Transparent" IsVisible="False" PointerPressed="OnCloseNotifyPanel">
+      <Border HorizontalAlignment="Center" VerticalAlignment="Center" Effect="drop-shadow(0 0 12 #80000000)">
+        <Border CornerRadius="8" Background="{DynamicResource Brush.Popup}" Padding="32">
+          <Path Width="52" Height="52" Data="{StaticResource Icons.Check}" Fill="Green"/>
+        </Border>
+      </Border>
+    </Border>
   </Grid>
 </v:ChromelessWindow>
