--- a/src/Resources/Locales/fr_FR.axaml
+++ b/src/Resources/Locales/fr_FR.axaml
@@ -1,4 +1,7 @@
 <ResourceDictionary xmlns="https://github.com/avaloniaui" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+  <ResourceDictionary.MergedDictionaries>
+    <ResourceInclude Source="avares://SourceGit/Resources/Locales/en_US.axaml"/>
+  </ResourceDictionary.MergedDictionaries>
   <x:String x:Key="Text.About" xml:space="preserve">A propos</x:String>
   <x:String x:Key="Text.About.Menu" xml:space="preserve">A propos de SourceGit</x:String>
   <x:String x:Key="Text.About.BuildWith" xml:space="preserve">• Compilé avec </x:String>
